# signal-without-smartphone

./: .gitignore  Cargo.toml  Cross.toml  QUICKSTART.md  README.md  build.rs  download-signal-cli.ps1  download-signal-cli.sh  signal-root.crt
.forgejo/workflows/: release.yml
.github/workflows/: release.yml
src/: main.rs  signal_http.rs
