[package]
name = "signal-setup"
version = "2.0.0"
description = "Signal Desktop setup tool for users without smartphones"
authors = ["almet"]
edition = "2021"

[[bin]]
name = "signal-setup"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.30", default-features = true }
egui = "0.30"
image = "0.25"
rxing = "0.6"
arboard = "3.4"

# Signal HTTP API dependencies
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_core_06 = { version = "0.6", package = "rand_core" }
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
xeddsa = "1.0"
prost = "0.13"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
thiserror = "2"

# Signal Protocol (official Rust implementation) — used for proper session
# establishment and encrypted sync messages after device linking.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.4" }
signal-crypto = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.4" }
tokio = { version = "1", features = ["rt", "macros"] }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing panic unwinding
